# shuup-stripe

./: .coveragerc  .travis.yml  MANIFEST.in  README.md  README.rst  package.json  requirements-test.txt  setup.cfg  setup.py  test_requirements.txt  test_settings.py
shoop_stripe/: __init__.py  admin_forms.py  checkout_phase.py  models.py  module.py  utils.py
shoop_stripe/migrations/: 0001_initial.py
shoop_stripe_tests/: settings.py  test_stripe.py
shuup_stripe/: __init__.py  admin_forms.py  checkout_forms.py  checkout_phase.py  models.py  module.py  utils.py
shuup_stripe/locale/en/LC_MESSAGES/: django.po
shuup_stripe/locale/fi_FI/LC_MESSAGES/: django.po
shuup_stripe/migrations/: 0001_initial.py  0002_update_managers.py
shuup_stripe/templates/shuup/stripe/: checkout_phase.jinja  wizard_form.jinja
tests/: test_stripe.py
