[metadata]
name = shuup-stripe
version = attr: shuup_stripe.__version__
description = Stripe Checkout integration for Shuup
long_description = file: README.rst
keywords = stripe, shuup
license = AGPL-3.0
license_file = LICENSE

[options]
include_package_data = True
packages = find:
install_requires =
    shuup>=0.4

[options.entry_points]
shuup.addon = shuup_stripe = shuup_stripe

[options.packages.find]
exclude = tests, tests.*

[bdist_wheel]
universal = 1

[flake8]
exclude = .tox,migrations,doc/*
max-line-length = 120
max-complexity = 10

[tool:pytest]
DJANGO_SETTINGS_MODULE = test_settings
django_find_project = false
norecursedirs = bower_components node_modules .git venv

[isort]
atomic=true
combine_as_imports=false
indent=4
known_first_party=shuup_stripe
known_standard_library=token,tokenize,enum,importlib
known_third_party=django,shuup,six
length_sort=false
line_length=79
multi_line_output=4
order_by_type=false
skip=migrations
not_skip=__init__.py
wrap_length=79
